--- a/k8s_data_preparation/configs/LungLobeSeg_nnUNet_3D_config.json
+++ b/k8s_data_preparation/configs/LungLobeSeg_nnUNet_3D_config.json
@@ -14,5 +14,6 @@
   "DatasetName": "LungLobeSeg",
   "TRAINING_CONFIGURATION": "3d_fullres",
   "TRAINER_CLASS_NAME": "nnUNetTrainerV2",
-  "TRAINER_PLAN": "nnUNetPlansv2.1"
+  "TRAINER_PLAN": "nnUNetPlansv2.1",
+  "Seed": 6
 }
