Tox config file updated for packaging

--- a/k8s_data_preparation/tox.ini
+++ b/k8s_data_preparation/tox.ini
@@ -27,10 +27,10 @@ deps =
     mypy
     flake8
 commands =
-    flake8 {toxinidir}/src/episurfsr {toxinidir}/scripts
+    flake8 {toxinidir}/src {toxinidir}/scripts
     mypy --config-file {toxinidir}/tox.ini \
     {posargs} \
-    {toxinidir}/src/episurfsr {toxinidir}/scripts {toxinidir}/tests
+    {toxinidir}/src {toxinidir}/scripts {toxinidir}/tests
 
 [testenv:clean]
 deps =
@@ -51,8 +51,6 @@ follow_imports = silent
 show_error_codes = True
 
 [mypy-SimpleITK.*]
-ignore_missing_imports = True
-[mypy-nnunet.*]
 ignore_missing_imports = True
 [mypy-utils.*]
 ignore_missing_imports = True
