--- a/k8s-data-preparation/values.yaml
+++ b/k8s-data-preparation/values.yaml
@@ -4,23 +4,19 @@
 
 replicaCount: 1
 
-extraHostVolumes:
-  - name: k8s-nnunet
-    hostPath: /home/simone/Documents/Projects/k8s_nnUNet
+extraHostVolumes: []
 extraSecretVolumes:
   - name: secret-git-key
     secretName: ssh-key-secret
 
 extraNFSVolumes:
   - name: nfs-data-volume
-    hostPath: /mnt/nfs_share/Data/LungLobeSeg
+    hostPath: /hdd/nfs_share/Data/LungLobeSeg
     server: 130.237.84.230
 
 extraVolumeMounts:
   - name: nfs-data-volume
     mountPath: /home/LungLobeSeg
-  - name: k8s-nnunet
-    mountPath: /home/k8s_nnUNet
   - mountPath: /dev/shm
     name: dshm
   - name: secret-git-key
