--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ changedir = {envtmpdir}
 deps =
     pytest-cov
 commands =
-    pytest --cov=episurfsr --cov-append {posargs} {toxinidir}/tests -v
+    pytest --cov=k8s_DP --cov-append {posargs} {toxinidir}/tests -v
 
 [testenv:pytest]
 deps =
