--- a/tox.ini
+++ b/tox.ini
@@ -58,3 +58,11 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 [mypy-setuptools.*]
 ignore_missing_imports = True
+[mypy-k8s_DP.*]
+ignore_missing_imports = True
+[mypy-tqdm.*]
+ignore_missing_imports = True
+[mypy-medpy.*]
+ignore_missing_imports = True
+[mypy-sklearn.*]
+ignore_missing_imports = True
