--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,9 @@ coloredlogs==15.0.1
 numpy==1.20.3
 MedPy==0.4.0
 tqdm==4.62.0
-seg_metrics==0.0.7
 plotly==5.1.0
 scikit_learn==0.24.2
 SimpleITK==2.1.0
 kaleido==0.2.1
 nbformat==5.1.3
+pandasgui==0.2.12
