--- a/helm/nnunet-environment/templates/service.yaml
+++ b/helm/nnunet-environment/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "k8s-data-preparation.fullname" . }}
+  name: {{ include "nnunet-environment.fullname" . }}
   labels:
-  {{- include "k8s-data-preparation.labels" . | nindent 4 }}
+  {{- include "nnunet-environment.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type}}
   ports:
@@ -15,4 +15,4 @@ spec:
   {{- end}}
 
   selector:
-  {{- include "k8s-data-preparation.selectorLabels" . | nindent 4 }}
+  {{- include "nnunet-environment.selectorLabels" . | nindent 4 }}
