--- a/helm/nnunet-environment/values.yaml
+++ b/helm/nnunet-environment/values.yaml
@@ -1,4 +1,4 @@
-# Default values for k8s-data-preparation.
+# Default values for nnunet-environment.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
