--- a/src/Hive/configs/LungLobeSeg_nnUNet_3D_config.json
+++ b/src/Hive/configs/LungLobeSeg_nnUNet_3D_config.json
@@ -12,6 +12,7 @@
   ],
   "FileExtension": ".nii.gz",
   "DatasetName": "LungLobeSeg",
+  "Experiment Name": "nnUNet_3D_fullres",
   "TRAINING_CONFIGURATION": "3d_fullres",
   "TRAINER_CLASS_NAME": "nnUNetTrainerV2",
   "TRAINER_PLAN": "nnUNetPlansv2.1",
@@ -24,18 +25,16 @@
     "Add_Volume_Column": true,
     "Search_file_pattern_from": "Ground Truth",
     "Save_stats": true,
-    "Metrics_dict": {
-      "Dice": {
-        "m_unit": "L",
-        "bar_config": {
-          "thresholds": [ 0.5, 0.55 ],
-          "colors": [ "green", "orange", "red" ],
-          "min_value": 0.0,
-          "max_value": 1.0
-        }
-      },
-      "Hausdorff Distance": {
-      }
-    }
+    "Metrics_dict": [
+      "Dice",
+      "Avg. Surface Distance",
+      "Precision",
+      "Recall",
+      "Accuracy",
+      "Specificity",
+      "Hausdorff Distance 95",
+      "Jaccard",
+      "Relative Volumetric Difference"
+    ]
   }
 }
