--- a/src/Hive/configs/LungLobeSeg_2.5D_config.json
+++ b/src/Hive/configs/LungLobeSeg_2.5D_config.json
@@ -81,12 +81,7 @@
   "post_processing_suffix": "post",
   "save_softmax": false,
   "Metrics_save_configs": {
-    "Additional_DF_columns": {
-      "test": "Prediction",
-      "reference": "Ground Truth"
-    },
-    "Add_Volume_Column": true,
-    "Search_file_pattern_from": "Ground Truth",
+    "ID_column": "reference",
     "Save_stats": true,
     "Metrics_dict": [
       "Dice",
