Predictions path added to config file

--- a/src/Hive/configs/LungLobeSeg_2.5D_config.json
+++ b/src/Hive/configs/LungLobeSeg_2.5D_config.json
@@ -79,6 +79,7 @@
   ],
   "validation_key_metric": "Mean_Dice",
   "post_processing_suffix": "post",
+  "predictions_folder_name": "predictions",
   "save_softmax": false,
   "Metrics_save_configs": {
     "ID_column": "reference",
