--- a/helm/monai-environment/values.yaml
+++ b/helm/monai-environment/values.yaml
@@ -5,10 +5,8 @@
 replicaCount: 1
 
 extraHostVolumes:
-  #- name: monai-data-preparation-dev
-  #  hostPath: /home/simone/Documents/Projects/k8s_nnUNet
-  - name: monai-k8s
-    hostPath: /home/simone/Documents/Projects/k8s_Monai
+  - name: hive
+    hostPath: /home/simone/Documents/Projects/Hive
 extraSecretVolumes:
   - name: secret-git-key
     secretName: ssh-key-secret
@@ -21,10 +19,8 @@ extraNFSVolumes:
 extraVolumeMounts:
   - name: nfs-data-volume
     mountPath: /home/LungLobeSeg
-  #- name: monai-data-preparation-dev
-  #  mountPath: /home/k8s_data_preparation
-  - name: monai-k8s
-    mountPath: /home/k8s_Monai
+  - name: hive
+    mountPath: /home/Hive
   - mountPath: /dev/shm
     name: dshm
   - name: secret-git-key
