--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
-visdom==0.1.8.9
-pandas==1.3.1
-coloredlogs==15.0.1
-numpy==1.20.3
-MedPy==0.4.0
-tqdm==4.62.0
-plotly==5.1.0
-scikit_learn==0.24.2
-SimpleITK==2.1.0
-kaleido==0.2.1
-nbformat==5.1.3
-pandasgui==0.2.12
+numpy~=1.21.2
+tqdm~=4.62.2
+simpleitk~=2.1.0
+nptyping~=1.4.3
+scipy~=1.7.1
+coloredlogs~=15.0.1
+visdom~=0.1.8.9
+medpy~=0.4.0
+plotly~=5.3.1
+pandas~=1.3.2
+pandasgui
+kaleido
+nbformat
+xlsxwriter
+openpyxl
