--- a/.gitignore
+++ b/.gitignore
@@ -102,7 +102,6 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-docker/nnUNet/.env
 .venv
 env/
 venv/
@@ -121,11 +120,12 @@ venv.bak/
 /site
 
 # mypy
-.mypy_cache/
+*.mypy_cache/
 .dmypy.json
 dmypy.json
 
 # Pyre type checker
 .pyre/
+
 /.idea/
-docker/Monai/.env
+*.env
