--- a/src/Hive/configs/LungLobeSeg_2.5D_config.json
+++ b/src/Hive/configs/LungLobeSeg_2.5D_config.json
@@ -1,4 +1,5 @@
 {
+  "label_suffix": "_mask.nii.gz",
   "label_dict": {
     "0": "Background",
     "1": "LU",
@@ -7,9 +8,9 @@
     "4": "RM",
     "5": "RL"
   },
-  "Modalities": [
-    "CT"
-  ],
+  "Modalities": {
+    "_image.nii.gz": "CT"
+  },
   "FileExtension": ".nii.gz",
   "DatasetName": "LungLobeSeg",
   "Experiment Name": "2.5D_UNet",
