3D full_res config updated

--- a/src/Hive/configs/LungLobeSeg_nnUNet_3D_config.json
+++ b/src/Hive/configs/LungLobeSeg_nnUNet_3D_config.json
@@ -33,5 +33,9 @@
       "Jaccard",
       "Relative Volumetric Difference"
     ]
-  }
+  },
+  "3D_validation_idx": [
+    0
+  ],
+  "n_folds": 5
 }
