CV_name parameter removed from JSON configs

--- a/src/Hive/configs/LungLobeSeg_MT_UNet_3D_LVC_Ex_config.json
+++ b/src/Hive/configs/LungLobeSeg_MT_UNet_3D_LVC_Ex_config.json
@@ -51,6 +51,5 @@
   },
   "TRAINING_CONFIGURATION": "3d_fullres",
   "TRAINER_CLASS_NAME": "nnUNetTrainerHiveMT",
-  "TRAINER_PLAN": "nnUNetPlansv2.1",
-  "cv_name": "In"
+  "TRAINER_PLAN": "nnUNetPlansv2.1"
 }
