Cascade config updated

--- a/src/Hive/configs/LungLobeSeg_nnUNet_3D_cascade_fissure_seg_LVC_Ex_config.json
+++ b/src/Hive/configs/LungLobeSeg_nnUNet_3D_cascade_fissure_seg_LVC_Ex_config.json
@@ -1,6 +1,5 @@
 {
-  "Cascade": true,
-  "Cascade_steps": 2,
+  "Cascade_steps": ["step_0","step_1"],
   "step_0": {
     "label_suffix": "_fissure_mask.nii.gz",
     "label_dict": {
