--- a/helm/hive-environment/Chart.yaml
+++ b/helm/hive-environment/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: nnunet-environment
-description: A Helm chart for running experiments in nnUNet environment
+name: hive-environment
+description: A Helm chart for running experiments in Hive environment
 
 # A chart can be either an 'application' or a 'library' chart.
 #
