nnDet Tutorial fixed

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -5,13 +5,19 @@ sphinxcontrib-contentui
 sphinx-jsonschema
 myst-parser
 pydata-sphinx-theme
-pynvml
-scikit_learn
-tqdm
 coloredlogs
 dicom2nifti
+loguru
+matplotlib
 nibabel
 numpy
 pydicom
+pydicom_seg
+pynvml
+scikit_learn
+scipy
 SimpleITK
-pydicom-seg
+tqdm
+nilearn
+pandas
+openpyxl
