Package Name Updated

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
-name = hive-maia
+name = pymaia
 author = Bendazzoli Simone
 author_email = simben@kth.se
-url = https://github.com/MAIA-KTH/Hive.git
+url = https://github.com/MAIA-KTH/PyMAIA.git
 description = Python Package to support Deep Learning data preparation, pre-processing. training, result visualization and model deployment across different frameworks (nnUNet, nnDetection, MONAI).
 long_description = file:README.md
 long_description_content_type = text/markdown; charset=UTF-8
@@ -11,9 +11,9 @@ license = GPLv3
 license_files =
     LICENSE
 project_urls =
-    Documentation=https://hive-maia.readthedocs.io
-    Bug Tracker=https://github.com/MAIA-KTH/Hive/issues
-    Source Code=https://github.com/MAIA-KTH/Hive
+    Documentation=https://pymaia.readthedocs.io
+    Bug Tracker=https://github.com/MAIA-KTH/PyMAIA/issues
+    Source Code=https://github.com/MAIA-KTH/PyMAIA
 classifiers =
     Intended Audience :: Developers
     Intended Audience :: Education
@@ -75,13 +75,13 @@ ignore =
     B907
     B908
 per_file_ignores = __init__.py: F401, __main__.py: F401
-exclude = *.pyi,.git,.eggs,Hive/_version.py,versioneer.py,venv,.venv,_version.py
+exclude = *.pyi,.git,.eggs,PyMAIA/_version.py,versioneer.py,venv,.venv,_version.py
 
 [isort]
-known_first_party = Hive
+known_first_party = PyMAIA
 profile = black
 line_length = 120
-skip = .git, .eggs, venv, .venv, versioneer.py, _version.py, conf.py, Hive/__init__.py
+skip = .git, .eggs, venv, .venv, versioneer.py, _version.py, conf.py, PyMAIA/__init__.py
 skip_glob = *.pyi
 add_imports = from __future__ import annotations
 append_only = true
