--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ changedir = {envtmpdir}
 deps =
     pytest-cov
 commands =
-    pytest --cov=Hive --cov-append {posargs} {toxinidir}/tests -v
+    pytest --cov=PyMAIA --cov-append {posargs} {toxinidir}/tests -v
 
 [testenv:pytest]
 deps =
@@ -58,7 +58,7 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 [mypy-setuptools.*]
 ignore_missing_imports = True
-[mypy-Hive.*]
+[mypy-PyMAIA.*]
 ignore_missing_imports = True
 [mypy-tqdm.*]
 ignore_missing_imports = True
