--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,20 @@
 coloredlogs
 dicom2nifti
-loguru
-matplotlib
 nibabel
+nilearn
 numpy
 pydicom
 pydicom_seg
-pynvml
-scikit_learn
 scipy
 SimpleITK
+torch
 tqdm
-nilearn
 pandas
+scikit_learn
 openpyxl
 mlflow
-monai
-pyjwt
+monai[nibabel, skimage, scipy, pillow, tensorboard, gdown, ignite, torchvision, itk, tqdm, pandas, mlflow, matplotlib, pydicom]
+fire
+jupyter
+einops
+jupyterlab
