--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = pymaia
 author = Bendazzoli Simone
 author_email = simben@kth.se
-url = https://github.com/MAIA-KTH/PyMAIA.git
+url = https://github.com/SimoneBendazzoli93/PyMAIA.git
 description = Python Package to support Deep Learning data preparation, pre-processing. training, result visualization and model deployment across different frameworks (nnUNet, nnDetection, MONAI).
 long_description = file:README.md
 long_description_content_type = text/markdown; charset=UTF-8
@@ -89,10 +89,10 @@ append_only = true
 [versioneer]
 VCS = git
 style = pep440
-versionfile_source = Hive/_version.py
-versionfile_build = Hive/_version.py
+versionfile_source = PyMAIA/_version.py
+versionfile_build = PyMAIA/_version.py
 tag_prefix = v
-parentdir_prefix = Hive-
+parentdir_prefix = PyMAIA-
 
 [mypy]
 # Suppresses error messages about imports that cannot be resolved.
@@ -127,21 +127,21 @@ exclude = venv/
 # Ignores all non-fatal errors.
 ignore_errors = True
 
-[mypy-Hive._version]
+[mypy-PyMAIA._version]
 # Ignores all non-fatal errors.
 ignore_errors = True
 
-[mypy-Hive.eggs]
+[mypy-PyMAIA.eggs]
 # Ignores all non-fatal errors.
 ignore_errors = True
 
-[mypy-Hive.*]
+[mypy-PyMAIA.*]
 # Also check the body of functions with no types in their type signature.
 check_untyped_defs = True
 # Warns about usage of untyped decorators.
 disallow_untyped_decorators = True
 
-[mypy-Hive.utils.*,Hive_ML.utils.*,Hive_ML.configs.*]
+[mypy-PyMAIA.utils.*]
 disallow_incomplete_defs = True
 
 [coverage:run]
