--- a/.github/workflows/publish_release.yaml
+++ b/.github/workflows/publish_release.yaml
@@ -28,7 +28,7 @@ jobs:
           # build tar.gz and wheel
           python setup.py sdist bdist_wheel --build-number $(date +'%Y%m%d%H%M')
           tmp_dir=$(mktemp -d)
-          cp dist/PyMAIA* "$tmp_dir"
+          cp dist/pymaia* "$tmp_dir"
           cd "$tmp_dir"
           ls -al
           
