--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = pymaia
+name = pymaia-learn
 author = Bendazzoli Simone
 author_email = simben@kth.se
 url = https://github.com/SimoneBendazzoli93/PyMAIA.git
