--- a/.github/workflows/publish_release.yaml
+++ b/.github/workflows/publish_release.yaml
@@ -83,8 +83,8 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
-        with:
-          generate_release_notes: True
+        #with:
+        #  generate_release_notes: True
 
   publish-pypi:
     name: Publish Python 🐍 distributions 📦 to PyPI
