--- a/setup.cfg
+++ b/setup.cfg
@@ -12,8 +12,8 @@ license_files =
     LICENSE
 project_urls =
     Documentation=https://pymaia.readthedocs.io
-    Bug Tracker=https://github.com/MAIA-KTH/PyMAIA/issues
-    Source Code=https://github.com/MAIA-KTH/PyMAIA
+    Bug Tracker=https://github.com/SimoneBendazzoli93/PyMAIA/issues
+    Source Codehttps://github.com/SimoneBendazzoli93/PyMAIA
 classifiers =
     Intended Audience :: Developers
     Intended Audience :: Education
