Setup.cfg updated

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,7 +13,7 @@ license_files =
 project_urls =
     Documentation=https://pymaia.readthedocs.io
     Bug Tracker=https://github.com/SimoneBendazzoli93/PyMAIA/issues
-    Source Codehttps://github.com/SimoneBendazzoli93/PyMAIA
+    Source Code=https://github.com/SimoneBendazzoli93/PyMAIA
 classifiers =
     Intended Audience :: Developers
     Intended Audience :: Education
