--- a/docs/environment.yaml
+++ b/docs/environment.yaml
@@ -1,184 +1,190 @@
-name: docs
+name: PyMAIA-docs
 channels:
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
   - bzip2=1.0.8=h5eee18b_6
-  - ca-certificates=2024.7.2=h06a4308_0
-  - ld_impl_linux-64=2.38=h1181459_1
+  - ca-certificates=2024.9.24=h06a4308_0
+  - ld_impl_linux-64=2.40=h12ee557_0
   - libffi=3.4.4=h6a678d5_1
   - libgcc-ng=11.2.0=h1234567_1
   - libgomp=11.2.0=h1234567_1
   - libstdcxx-ng=11.2.0=h1234567_1
   - libuuid=1.41.5=h5eee18b_0
   - ncurses=6.4=h6a678d5_0
-  - openssl=3.0.14=h5eee18b_0
+  - openssl=3.0.15=h5eee18b_0
   - pandoc=2.12=h06a4308_3
-  - pip=24.0=py310h06a4308_0
-  - python=3.10.14=h955ad1f_1
+  - pip=24.2=py310h06a4308_0
+  - python=3.10.15=he870216_1
   - readline=8.2=h5eee18b_0
-  - setuptools=69.5.1=py310h06a4308_0
+  - setuptools=75.1.0=py310h06a4308_0
   - sqlite=3.45.3=h5eee18b_0
   - tk=8.6.14=h39e8969_0
-  - wheel=0.43.0=py310h06a4308_0
+  - wheel=0.44.0=py310h06a4308_0
   - xz=5.4.6=h5eee18b_1
   - zlib=1.2.13=h5eee18b_1
   - pip:
       - accessible-pygments==0.0.5
-      - alabaster==0.7.16
-      - alembic==1.13.2
+      - alabaster==1.0.0
+      - alembic==1.13.3
       - aniso8601==9.0.1
       - asttokens==2.4.1
-      - attrs==23.2.0
-      - babel==2.15.0
+      - attrs==24.2.0
+      - babel==2.16.0
       - beautifulsoup4==4.12.3
       - bleach==6.1.0
       - blinker==1.8.2
-      - cachetools==5.4.0
-      - certifi==2024.7.4
-      - charset-normalizer==3.3.2
+      - cachetools==5.5.0
+      - certifi==2024.8.30
+      - charset-normalizer==3.4.0
       - click==8.1.7
-      - cloudpickle==3.0.0
+      - cloudpickle==3.1.0
       - coloredlogs==15.0.1
-      - contourpy==1.2.1
+      - contourpy==1.3.0
       - cycler==0.12.1
+      - databricks-sdk==0.35.0
       - decorator==5.1.1
       - defusedxml==0.7.1
       - deprecated==1.2.14
-      - dicom2nifti==2.4.11
+      - dicom2nifti==2.5.0
       - docker==7.1.0
       - docutils==0.21.2
-      - entrypoints==0.4
       - et-xmlfile==1.1.0
       - exceptiongroup==1.2.2
-      - executing==2.0.1
+      - executing==2.1.0
       - fastjsonschema==2.20.0
-      - filelock==3.15.4
+      - filelock==3.16.1
       - flask==3.0.3
-      - fonttools==4.53.1
-      - fsspec==2024.6.1
+      - fonttools==4.54.1
+      - fsspec==2024.9.0
       - gitdb==4.0.11
       - gitpython==3.1.43
+      - google-auth==2.35.0
       - graphene==3.3
-      - graphql-core==3.2.3
+      - graphql-core==3.2.5
       - graphql-relay==3.2.0
-      - greenlet==3.0.3
-      - gunicorn==22.0.0
+      - greenlet==3.1.1
+      - gunicorn==23.0.0
       - humanfriendly==10.0
-      - idna==3.7
+      - idna==3.10
       - imagesize==1.4.1
-      - importlib-metadata==7.2.1
-      - ipython==8.26.0
+      - importlib-metadata==8.4.0
+      - importlib-resources==6.4.5
+      - ipython==8.28.0
       - itsdangerous==2.2.0
       - jedi==0.19.1
       - jinja2==3.1.4
       - joblib==1.4.2
       - jsonpointer==3.0.0
       - jsonschema==3.2.0
-      - jupyter-client==8.6.2
+      - jupyter-client==8.6.3
       - jupyter-core==5.7.2
       - jupyterlab-pygments==0.3.0
-      - kiwisolver==1.4.5
-      - lxml==5.2.2
+      - kiwisolver==1.4.7
+      - lxml==5.3.0
       - mako==1.3.5
-      - markdown==3.6
+      - markdown==3.7
       - markdown-it-py==3.0.0
-      - markupsafe==2.1.5
-      - matplotlib==3.9.1
+      - markupsafe==3.0.1
+      - matplotlib==3.9.2
       - matplotlib-inline==0.1.7
-      - mdit-py-plugins==0.4.1
+      - mdit-py-plugins==0.4.2
       - mdurl==0.1.2
       - mistune==3.0.2
-      - mlflow==2.14.3
+      - mlflow==2.17.0
+      - mlflow-skinny==2.17.0
       - mpmath==1.3.0
-      - myst-parser==3.0.1
+      - myst-parser==4.0.0
       - nbclient==0.10.0
       - nbconvert==7.16.4
       - nbformat==5.10.4
       - nbsphinx==0.9.2
-      - networkx==3.3
-      - nibabel==5.2.1
+      - networkx==3.4.1
+      - nibabel==5.3.1
       - nilearn==0.10.4
       - numpy==1.26.4
-      - nvidia-cublas-cu12==12.1.3.1
-      - nvidia-cuda-cupti-cu12==12.1.105
-      - nvidia-cuda-nvrtc-cu12==12.1.105
-      - nvidia-cuda-runtime-cu12==12.1.105
+      - nvidia-cublas-cu12==12.4.5.8
+      - nvidia-cuda-cupti-cu12==12.4.127
+      - nvidia-cuda-nvrtc-cu12==12.4.127
+      - nvidia-cuda-runtime-cu12==12.4.127
       - nvidia-cudnn-cu12==9.1.0.70
-      - nvidia-cufft-cu12==11.0.2.54
-      - nvidia-curand-cu12==10.3.2.106
-      - nvidia-cusolver-cu12==11.4.5.107
-      - nvidia-cusparse-cu12==12.1.0.106
-      - nvidia-nccl-cu12==2.20.5
-      - nvidia-nvjitlink-cu12==12.5.82
-      - nvidia-nvtx-cu12==12.1.105
+      - nvidia-cufft-cu12==11.2.1.3
+      - nvidia-curand-cu12==10.3.5.147
+      - nvidia-cusolver-cu12==11.6.1.9
+      - nvidia-cusparse-cu12==12.3.1.170
+      - nvidia-nccl-cu12==2.21.5
+      - nvidia-nvjitlink-cu12==12.4.127
+      - nvidia-nvtx-cu12==12.4.127
       - openpyxl==3.1.5
-      - opentelemetry-api==1.26.0
-      - opentelemetry-sdk==1.26.0
-      - opentelemetry-semantic-conventions==0.47b0
+      - opentelemetry-api==1.27.0
+      - opentelemetry-sdk==1.27.0
+      - opentelemetry-semantic-conventions==0.48b0
       - packaging==24.1
-      - pandas==2.2.2
+      - pandas==2.2.3
       - pandocfilters==1.5.1
       - parso==0.8.4
       - pexpect==4.9.0
-      - pillow==10.4.0
-      - platformdirs==4.2.2
-      - prompt-toolkit==3.0.47
-      - protobuf==4.25.4
+      - pillow==11.0.0
+      - platformdirs==4.3.6
+      - prompt-toolkit==3.0.48
+      - protobuf==5.28.2
       - ptyprocess==0.7.0
       - pure-eval==0.2.3
-      - pyarrow==15.0.2
+      - pyarrow==17.0.0
+      - pyasn1==0.6.1
+      - pyasn1-modules==0.4.1
       - pydata-sphinx-theme==0.13.3
       - pydicom==2.4.4
       - pydicom-seg==0.4.1
       - pygments==2.18.0
-      - pyparsing==3.1.2
+      - pymaia-learn==1.1
+      - pyparsing==3.2.0
       - pyrsistent==0.20.0
       - python-dateutil==2.9.0.post0
       - python-gdcm==3.0.24.1
-      - pytz==2024.1
-      - pyyaml==6.0.1
-      - pyzmq==26.0.3
-      - querystring-parser==1.2.4
+      - pytz==2024.2
+      - pyyaml==6.0.2
+      - pyzmq==26.2.0
       - requests==2.32.3
-      - scikit-learn==1.5.1
-      - scipy==1.14.0
-      - simpleitk==2.3.1
+      - rsa==4.9
+      - scikit-learn==1.5.2
+      - scipy==1.14.1
+      - simpleitk==2.4.0
       - six==1.16.0
       - smmap==5.0.1
       - snowballstemmer==2.2.0
-      - soupsieve==2.5
-      - sphinx==7.4.7
+      - soupsieve==2.6
+      - sphinx==8.1.3
       - sphinx-argparse==0.5.2
-      - sphinx-autodoc-typehints==2.2.3
+      - sphinx-autodoc-typehints==2.5.0
       - sphinx-copybutton==0.5.2
       - sphinx-jsonschema==1.19.1
-      - sphinxcontrib-applehelp==1.0.8
+      - sphinxcontrib-applehelp==2.0.0
       - sphinxcontrib-contentui==0.2.5
-      - sphinxcontrib-devhelp==1.0.6
-      - sphinxcontrib-htmlhelp==2.0.6
+      - sphinxcontrib-devhelp==2.0.0
+      - sphinxcontrib-htmlhelp==2.1.0
       - sphinxcontrib-jsmath==1.0.1
-      - sphinxcontrib-qthelp==1.0.8
-      - sphinxcontrib-serializinghtml==1.1.10
-      - sqlalchemy==2.0.31
+      - sphinxcontrib-qthelp==2.0.0
+      - sphinxcontrib-serializinghtml==2.0.0
+      - sqlalchemy==2.0.36
       - sqlparse==0.5.1
       - stack-data==0.6.3
       - sympy==1.13.1
       - threadpoolctl==3.5.0
       - tinycss2==1.3.0
-      - tomli==2.0.1
-      - torch==2.4.0
+      - tomli==2.0.2
+      - torch==2.5.0
       - tornado==6.4.1
-      - tqdm==4.66.4
+      - tqdm==4.66.5
       - traitlets==5.14.3
-      - triton==3.0.0
+      - triton==3.1.0
       - typing-extensions==4.12.2
-      - tzdata==2024.1
-      - urllib3==2.2.2
+      - tzdata==2024.2
+      - urllib3==2.2.3
       - wcwidth==0.2.13
       - webencodings==0.5.1
-      - werkzeug==3.0.3
+      - werkzeug==3.0.4
       - wrapt==1.16.0
-      - zipp==3.19.2
-prefix: /opt/miniconda3/envs/docs
+      - zipp==3.20.2
+prefix: /opt/miniconda3/envs/PyMAIA-docs
