--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -13,7 +13,7 @@ dicom2nifti
 nibabel
 nilearn
 numpy
-pydicom
+pydicom==2.4.4
 pydicom_seg
 scipy
 SimpleITK
@@ -22,4 +22,3 @@ pandas
 scikit_learn
 openpyxl
 mlflow
-torch
